[gd_scene load_steps=3 format=3 uid="uid://vow33xgmv80e"]

[ext_resource type="FontFile" uid="uid://ckcs050n50kh6" path="res://fonts/Xolonium-Regular.ttf" id="1_6j86u"]
[ext_resource type="Script" path="res://scripts/start_menue.gd" id="1_oxvgu"]

[node name="StartMenue" type="CanvasLayer"]
script = ExtResource("1_oxvgu")

[node name="NewBut" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -21.5
offset_right = 21.5
offset_bottom = 31.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_6j86u")
theme_override_font_sizes/font_size = 64
text = "New"

[node name="LoadBut" type="Button" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_6j86u")
theme_override_font_sizes/font_size = 64
text = "Load"

[node name="QuitBut" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -21.0
offset_top = -31.0
offset_right = 21.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_6j86u")
theme_override_font_sizes/font_size = 64
text = "Quit"

[node name="MultiBut" type="Button" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.5
offset_right = 49.0
offset_bottom = 15.5
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_6j86u")
theme_override_font_sizes/font_size = 64
text = "Multi"
icon_alignment = 1

[node name="Tittle" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -120.0
offset_right = 250.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_6j86u")
theme_override_font_sizes/font_size = 64
text = "Resemble Star Valley"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Loading" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -262.5
offset_top = -39.0
offset_right = 262.5
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_6j86u")
theme_override_font_sizes/font_size = 64
text = "Loading Terrian"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="NewBut" to="." method="_on_new_but_pressed"]
